--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.0",
   "description": "Assignment 7",
   "main": "index.js",
-  "dependencies":{
-    "express": "^4.14.0"
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "~4.14.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ingthor and Laufey",
-  "license": "MIT",
-  "dependencies": {
-    "express": "~4.14.0"
-  }
+  "license": "MIT"
 }
